server/crates/djinn-agent/src/snapshots/djinn_agent__extension__schemas__tests__planner_tool_schemas.snap
---
source: crates/djinn-agent/src/extension/schemas.rs
assertion_line: 798
expression: tool_schemas_planner()
---
[
  {
    "description": "Show details of a work item including recent activity and blockers.",
    "inputSchema": {
      "properties": {
        "id": {
          "description": "Task UUID or short ID",
          "type": "string"
        }
      },
      "required": [
        "id"
      ],
      "type": "object"
    },
    "name": "task_show"
  },
  {
    "description": "List tasks with optional filters and pagination.",
    "inputSchema": {
      "properties": {
        "issue_type": {
          "type": "string"
        },
        "label": {
          "type": "string"
        },
        "limit": {
          "type": "integer"
        },
        "offset": {
          "type": "integer"
        },
        "parent": {
          "description": "Epic ID to filter by",
          "type": "string"
        },
        "priority": {
          "type": "integer"
        },
        "sort": {
          "type": "string"
        },
        "status": {
          "type": "string"
        },
        "text": {
          "description": "Free-text search in title/description",
          "type": "string"
        }
      },
      "type": "object"
    },
    "name": "task_list"
  },
  {
    "description": "Query a task's activity log with optional filters. Returns comments, status transitions, verification results, and other events. Use to inspect Lead guidance, reviewer feedback, or verification history.",
    "inputSchema": {
      "properties": {
        "actor_role": {
          "description": "Filter by actor: lead, reviewer, worker, verification, system",
          "type": "string"
        },
        "event_type": {
          "description": "Filter by event type: comment, status_changed, commands_run, merge_conflict, task_review_start",
          "type": "string"
        },
        "id": {
          "description": "Task UUID or short ID",
          "type": "string"
        },
        "limit": {
          "description": "Max entries to return (default 30, max 50)",
          "type": "integer"
        }
      },
      "required": [
        "id"
      ],
      "type": "object"
    },
    "name": "task_activity_list"
  },
  {
    "description": "Read a note by permalink or title.",
    "inputSchema": {
      "properties": {
        "identifier": {
          "description": "Permalink or title",
          "type": "string"
        },
        "project": {
          "description": "Absolute project path",
          "type": "string"
        }
      },
      "required": [
        "project",
        "identifier"
      ],
      "type": "object"
    },
    "name": "memory_read"
  },
  {
    "description": "Search notes in project memory.",
    "inputSchema": {
      "properties": {
        "folder": {
          "type": "string"
        },
        "limit": {
          "type": "integer"
        },
        "project": {
          "description": "Absolute project path",
          "type": "string"
        },
        "query": {
          "type": "string"
        },
        "task_id": {
          "description": "Task ID for affinity scoring; defaults to the current session task",
          "type": "string"
        },
        "type": {
          "type": "string"
        }
      },
      "required": [
        "project",
        "query"
      ],
      "type": "object"
    },
    "name": "memory_search"
  },
  {
    "description": "List notes in project memory. Returns compact summaries without full content.",
    "inputSchema": {
      "properties": {
        "depth": {
          "description": "Depth control: 0 = unlimited, 1 = exact folder (default), N = N levels",
          "type": "integer"
        },
        "folder": {
          "description": "Filter by folder (e.g. \"decisions\")",
          "type": "string"
        },
        "project": {
          "description": "Absolute project path",
          "type": "string"
        },
        "type": {
          "description": "Filter by note type (e.g. \"adr\", \"reference\", \"research\")",
          "type": "string"
        },
        "status": {
          "description": "Explicit lifecycle status filter. Defaults to active; use archived or deprecated to list non-live notes.",
          "type": "string"
        }
      },
      "required": [
        "project"
      ],
      "type": "object"
    },
    "name": "memory_list"
  },
  {
    "description": "Execute shell commands in the task worktree. Commands always run from the worktree root.",
    "inputSchema": {
      "properties": {
        "command": {
          "description": "Shell command to execute",
          "type": "string"
        },
        "timeout_ms": {
          "description": "Timeout in milliseconds (default 120000, max 600000)",
          "type": "integer"
        }
      },
      "required": [
        "command"
      ],
      "type": "object"
    },
    "name": "shell"
  },
  {
    "description": "Read a file with line numbers and pagination. Rejects binary files.",
    "inputSchema": {
      "properties": {
        "file_path": {
          "description": "Absolute or worktree-relative file path",
          "type": "string"
        },
        "limit": {
          "minimum": 1,
          "type": "integer"
        },
        "offset": {
          "minimum": 0,
          "type": "integer"
        }
      },
      "required": [
        "file_path"
      ],
      "type": "object"
    },
    "name": "read"
  },
  {
    "description": "Query the Language Server Protocol for code navigation. Operations: hover (type info at position), definition (go to definition), references (find all references), symbols (list document symbols). Line and character are 1-based.",
    "inputSchema": {
      "properties": {
        "character": {
          "description": "1-based column number (required for hover, definition, references)",
          "minimum": 1,
          "type": "integer"
        },
        "file_path": {
          "description": "Absolute or worktree-relative file path",
          "type": "string"
        },
        "line": {
          "description": "1-based line number (required for hover, definition, references)",
          "minimum": 1,
          "type": "integer"
        },
        "operation": {
          "description": "LSP operation to perform",
          "enum": [
            "hover",
            "definition",
            "references",
            "symbols"
          ],
          "type": "string"
        }
      },
      "required": [
        "operation",
        "file_path"
      ],
      "type": "object"
    },
    "name": "lsp"
  },
  {
    "description": "Paginated view of a truncated tool output. When a tool result was truncated, the full output is stashed and can be browsed here by tool_use_id.",
    "inputSchema": {
      "properties": {
        "limit": {
          "description": "Number of lines to return (default 200)",
          "minimum": 1,
          "type": "integer"
        },
        "offset": {
          "description": "Line offset (0-based, default 0)",
          "minimum": 0,
          "type": "integer"
        },
        "tool_use_id": {
          "description": "The tool_use_id from the truncated result",
          "type": "string"
        }
      },
      "required": [
        "tool_use_id"
      ],
      "type": "object"
    },
    "name": "output_view"
  },
  {
    "description": "Regex search within a truncated tool output. Returns matching lines with context from the full stashed output.",
    "inputSchema": {
      "properties": {
        "context_lines": {
          "description": "Lines of context around each match (default 3)",
          "minimum": 0,
          "type": "integer"
        },
        "pattern": {
          "description": "Regex pattern to search for",
          "type": "string"
        },
        "tool_use_id": {
          "description": "The tool_use_id from the truncated result",
          "type": "string"
        }
      },
      "required": [
        "tool_use_id",
        "pattern"
      ],
      "type": "object"
    },
    "name": "output_grep"
  },
  {
    "description": "Create a new task under an epic. Agents should use this only when explicitly allowed by their role and task design.",
    "inputSchema": {
      "properties": {
        "acceptance_criteria": {
          "items": {
            "type": "object"
          },
          "type": "array"
        },
        "description": {
          "type": "string"
        },
        "design": {
          "type": "string"
        },
        "epic_id": {
          "description": "Parent epic UUID or short ID",
          "type": "string"
        },
        "issue_type": {
          "type": "string"
        },
        "labels": {
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "owner": {
          "type": "string"
        },
        "parent_id": {
          "type": "string"
        },
        "priority": {
          "type": "integer"
        },
        "status": {
          "type": "string"
        },
        "title": {
          "type": "string"
        }
      },
      "required": [
        "epic_id",
        "title"
      ],
      "type": "object"
    },
    "name": "task_create"
  },
  {
    "description": "Update task fields and append/remove memory refs when supported by the workflow.",
    "inputSchema": {
      "properties": {
        "acceptance_criteria": {
          "items": {
            "type": "object"
          },
          "type": "array"
        },
        "description": {
          "type": "string"
        },
        "design": {
          "type": "string"
        },
        "epic_id": {
          "type": "string"
        },
        "id": {
          "description": "Task UUID or short ID",
          "type": "string"
        },
        "memory_refs_add": {
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "memory_refs_remove": {
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "owner": {
          "type": "string"
        },
        "priority": {
          "type": "integer"
        },
        "status": {
          "type": "string"
        },
        "title": {
          "type": "string"
        }
      },
      "required": [
        "id"
      ],
      "type": "object"
    },
    "name": "task_update"
  },
  {
    "description": "Transition a task using a named workflow action.",
    "inputSchema": {
      "properties": {
        "action": {
          "description": "Transition action name",
          "type": "string"
        },
        "id": {
          "description": "Task UUID or short ID",
          "type": "string"
        }
      },
      "required": [
        "id",
        "action"
      ],
      "type": "object"
    },
    "name": "task_transition"
  },
  {
    "description": "Delete the task worktree and branch so a fresh implementation can restart from target branch state.",
    "inputSchema": {
      "properties": {
        "id": {
          "description": "Task UUID or short ID",
          "type": "string"
        }
      },
      "required": [
        "id"
      ],
      "type": "object"
    },
    "name": "task_delete_branch"
  },
  {
    "description": "Soft-delete all activity entries (comments, session errors, rejections) for a task. The worker on the next attempt will only see post-intervention activity.",
    "inputSchema": {
      "properties": {
        "id": {
          "description": "Task UUID or short ID",
          "type": "string"
        }
      },
      "required": [
        "id"
      ],
      "type": "object"
    },
    "name": "task_archive_activity"
  },
  {
    "description": "Reset reopen_count and continuation_count to zero. Use when the task has been meaningfully rescoped and old retry history is no longer relevant.",
    "inputSchema": {
      "properties": {
        "id": {
          "description": "Task UUID or short ID",
          "type": "string"
        }
      },
      "required": [
        "id"
      ],
      "type": "object"
    },
    "name": "task_reset_counters"
  },
  {
    "description": "Kill the paused worker session and delete its saved conversation. The next dispatch will start a fresh session. Unlike task_delete_branch, this preserves the branch and any committed code.",
    "inputSchema": {
      "properties": {
        "id": {
          "description": "Task UUID or short ID",
          "type": "string"
        }
      },
      "required": [
        "id"
      ],
      "type": "object"
    },
    "name": "task_kill_session"
  },
  {
    "description": "List tasks that are blocked by the given task. Use before decomposing to check downstream dependents.",
    "inputSchema": {
      "properties": {
        "id": {
          "description": "Task UUID or short ID",
          "type": "string"
        }
      },
      "required": [
        "id"
      ],
      "type": "object"
    },
    "name": "task_blocked_list"
  },
  {
    "description": "Show details for an epic by UUID or short ID.",
    "inputSchema": {
      "properties": {
        "id": {
          "description": "Epic UUID or short ID",
          "type": "string"
        }
      },
      "required": [
        "id"
      ],
      "type": "object"
    },
    "name": "epic_show"
  },
  {
    "description": "Update epic fields (title/description) and accept memory ref delta args for planner workflows.",
    "inputSchema": {
      "properties": {
        "description": {
          "type": "string"
        },
        "id": {
          "description": "Epic UUID or short ID",
          "type": "string"
        },
        "memory_refs_add": {
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "memory_refs_remove": {
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "status": {
          "type": "string"
        },
        "title": {
          "type": "string"
        }
      },
      "required": [
        "id"
      ],
      "type": "object"
    },
    "name": "epic_update"
  },
  {
    "description": "List tasks for an epic with pagination.",
    "inputSchema": {
      "properties": {
        "id": {
          "description": "Epic UUID or short ID",
          "type": "string"
        },
        "limit": {
          "type": "integer"
        },
        "offset": {
          "type": "integer"
        }
      },
      "required": [
        "id"
      ],
      "type": "object"
    },
    "name": "epic_tasks"
  },
  {
    "description": "Signal that the grooming session is complete. Report per-task actions taken. Your session ends after this call.",
    "inputSchema": {
      "properties": {
        "summary": {
          "description": "Optional overall summary of the grooming session",
          "type": "string"
        },
        "tasks_reviewed": {
          "description": "Per-task grooming entries",
          "items": {
            "properties": {
              "action": {
                "description": "Action taken on this task",
                "enum": [
                  "promoted",
                  "improved",
                  "skipped"
                ],
                "type": "string"
              },
              "changes": {
                "description": "Description of changes made to this task",
                "type": "string"
              },
              "task_id": {
                "description": "Task UUID or short_id",
                "type": "string"
              }
            },
            "required": [
              "task_id",
              "action"
            ],
            "type": "object"
          },
          "type": "array"
        }
      },
      "type": "object"
    },
    "name": "submit_grooming"
  }
]
